--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   },
   "dependencies": {
     "@prisma/client": "^6.14.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.541.0",
     "next": "15.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -29,6 +33,7 @@
     "prisma": "^6.14.0",
     "tailwindcss": "^4",
     "tsx": "^4.20.5",
+    "tw-animate-css": "^1.3.7",
     "typescript": "^5"
   }
 }
