--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@prisma/client": "^6.15.0",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-email/components": "^0.5.5",
+    "@react-email/render": "^1.3.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
@@ -23,6 +25,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-leaflet": "^5.0.0",
+    "resend": "^6.1.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
